test/ui/tests/type-mismatch.stderr
error[E032]: expected type `crate.X`, got type `Type`
  --> ${DIRECTORY}/type-mismatch.lushui:15:4
   |
15 | a: X = Type
   |    - expected due to this
   |
  --> ${DIRECTORY}/type-mismatch.lushui:15:8
   |
15 | a: X = Type
   |        ^^^^ has the wrong type
   |

error[E032]: expected type `Type`, got type `crate.X`
  --> ${DIRECTORY}/type-mismatch.lushui:16:4
   |
16 | b: Type = X.x
   |    ---- expected due to this
   |
  --> ${DIRECTORY}/type-mismatch.lushui:16:11
   |
16 | b: Type = X.x
   |           ^^^ has the wrong type
   |

error[E032]: expected type `Type`, got type `extern.core.bool.Bool`
  --> ${DIRECTORY}/type-mismatch.lushui:20:4
   |
20 | x: false = false
   |    ^^^^^ has the wrong type
   |

error[E032]: expected type `extern.core.bool.Bool`, got type `extern.core.nat.Nat`
  --> ${DIRECTORY}/type-mismatch.lushui:22:10
   |
22 | take (b: Bool): Bool = true
   |          ---- expected due to this
   |
  --> ${DIRECTORY}/type-mismatch.lushui:24:16
   |
24 | t: Bool = take 44
   |                ^^ has the wrong type
   |

error: aborting due to 4 previous errors
 note: the error E032 has a detailed explanation
 help: run `lushui explain E032` to view it

